Final commit: Ajustes de build, documentação e finalização do projeto.